testdata/baselines/reference/compiler/assertsPredicateParameterMismatch.errors.txt
assertsPredicateParameterMismatch(8,12): error TS1005: '{' expected.
assertsPredicateParameterMismatch(8,22): error TS1005: ';' expected.
assertsPredicateParameterMismatch(10,11): error TS1005: ';' expected.
assertsPredicateParameterMismatch(10,11): error TS1003: Identifier expected.
assertsPredicateParameterMismatch(10,11): error TS1005: ';' expected.
assertsPredicateParameterMismatch(10,11): error TS1003: Identifier expected.

==== assertsPredicateParameterMismatch (6 errors) ====
    
    // This test verifies that the checker doesn't panic when an assertion predicate
    // references a parameter name that doesn't match any actual function parameter.
    // This specifically tests the code path in isReachableFlowNodeWorker.
    
    function assertCondition(
      _condition: boolean
    ): asserts condition {  // "condition" doesn't match parameter "_condition"
               ~~~~~~~~~
!!! error TS1005: '{' expected.
                         ~
!!! error TS1005: ';' expected.
      if (!_condition) {
        throw new Error('Condition failed');
              ~~~
!!! error TS1005: ';' expected.
              ~~~
!!! error TS1003: Identifier expected.
              ~~~
!!! error TS1005: ';' expected.
              ~~~
!!! error TS1003: Identifier expected.
      }
    }
    
    function test(): void {
      assertCondition(false);
      console.log("unreachable");
    }
    
